push dev bucket

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,9 +2,7 @@ name: Build and Deploy ComfyUI Docker Image
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ main, dev]
   workflow_dispatch:
 
 env:
@@ -13,7 +11,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
+    environment: "prod"
 
     steps:
     - name: Checkout repository
@@ -54,7 +52,7 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: |
-          ${{ secrets.DOCKER_HUB_USER_NAME }}/${{ env.IMAGE_NAME }}
+          ${{ secrets.DOCKER_HUB_USER_NAME }}/${{ env.IMAGE_NAME }} ${{github.ref == 'refs/heads/dev' && '-dev' || ''}}
         tags: |
           type=sha,prefix=main-
           type=raw,value=latest,enable={{is_default_branch}}
