create latest tag for dev also

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -54,8 +54,9 @@ jobs:
         images: |
           ${{ secrets.DOCKER_HUB_USER_NAME }}/${{ env.IMAGE_NAME }}${{github.ref == 'refs/heads/dev' && '-dev' || ''}}
         tags: |
-          type=sha,prefix=main-
+          type=sha,prefix={{branch}}-
           type=raw,value=latest,enable={{is_default_branch}}
+          type=raw,value=dev-latest,enable={{branch == 'dev'}}
 
     - name: Build and push Docker image to Docker Hub
       uses: docker/build-push-action@v5
