--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -54,9 +54,9 @@ jobs:
         images: |
           ${{ secrets.DOCKER_HUB_USER_NAME }}/${{ env.IMAGE_NAME }}${{github.ref == 'refs/heads/dev' && '-dev' || ''}}
         tags: |
-          type=sha,prefix={{branch}}-
+          type=sha,prefix=${{ github.ref_name }}-
           type=raw,value=latest,enable={{is_default_branch}}
-          type=raw,value=dev-latest,enable={{branch == 'dev'}}
+          type=raw,value=dev-latest,enable=${{ github.ref == 'refs/heads/dev' }}
 
     - name: Build and push Docker image to Docker Hub
       uses: docker/build-push-action@v5
