Fix Docker image parameter passing in AMI preparation
- Changed from environment variable to command-line parameter
- Updated workflow to pass Docker image URI as parameter
- Added debug output to track parameter passing
- This should fix the Docker image pull failure during AMI creation

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -175,7 +175,6 @@ jobs:
         set -e
         
         # Set environment variables
-        export COMFYUI_DOCKER_IMAGE="${{ needs.build-and-push.outputs.image-uri }}"
         export DEBIAN_FRONTEND=noninteractive
         
         # Log everything
@@ -203,10 +202,13 @@ jobs:
         
         # Run the AMI preparation
         echo "Starting AMI preparation script..."
-        export COMFYUI_DOCKER_IMAGE="${{ needs.build-and-push.outputs.image-uri }}"
+        
+        # Pass Docker image as parameter to ensure it's available
+        DOCKER_IMAGE="${{ needs.build-and-push.outputs.image-uri }}"
+        echo "Using Docker image: \$DOCKER_IMAGE"
         
         # Run with timeout to prevent infinite hangs
-        timeout 1800 /scripts/prepare_ami.sh || {
+        timeout 1800 /scripts/prepare_ami.sh "\$DOCKER_IMAGE" || {
             echo "❌ AMI preparation script timed out or failed"
             echo "Exit code: $?"
             echo "Last checkpoint:"
