Fix Docker image URI output in build-and-push job
- Changed from steps.build.outputs.image-uri to steps.image-uri.outputs.image-uri
- The image URI is set in the 'Set image URI output' step, not the build step
- This should fix the empty Docker image parameter being passed to AMI preparation

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       contents: read
 
     outputs:
-      image-uri: ${{ steps.build.outputs.image-uri }}
+      image-uri: ${{ steps.image-uri.outputs.image-uri }}
       image-tag: ${{ steps.meta.outputs.tags }}
 
     steps:
