--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -361,7 +361,7 @@ jobs:
         done
 
     - name: Wait for AMI preparation completion
-      timeout-minutes: 35
+      timeout-minutes: 10
       run: |
         INSTANCE_ID="${{ steps.launch-instance.outputs.instance-id }}"
         
@@ -452,7 +452,7 @@ jobs:
               exit 1
             fi
             
-            if [[ "$RESULT" == *"READY"* ]]; then
+            if [[ "$RESULT" == "READY" ]]; then
               echo "✅ AMI preparation completed!"
               break
             fi
