Simplify tenant setup script

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -669,6 +669,22 @@ jobs:
             "# Check if service is running",
             "SERVICE_STATUS=$(systemctl is-active comfyui-multitenant.service 2>/dev/null || echo \"inactive\")",
             "echo \"Service status: $SERVICE_STATUS\"",
+            "# If service is in activating state, wait a bit and check again",
+            "if [ \"$SERVICE_STATUS\" = \"activating\" ]; then",
+            "  echo \"Service is activating, waiting 10 seconds...\"",
+            "  sleep 10",
+            "  SERVICE_STATUS=$(systemctl is-active comfyui-multitenant.service 2>/dev/null || echo \"inactive\")",
+            "  echo \"Service status after wait: $SERVICE_STATUS\"",
+            "fi",
+            "# Check service logs if not active",
+            "if [ \"$SERVICE_STATUS\" != \"active\" ]; then",
+            "  echo \"Service not active, checking logs...\"",
+            "  journalctl -u comfyui-multitenant.service --no-pager -n 20 || echo \"No service logs\"",
+            "  echo \"Checking what is using port 80...\"",
+            "  netstat -tlnp | grep :80 || echo \"Nothing listening on port 80\"",
+            "  echo \"Checking if tenant manager process is running...\"",
+            "  ps aux | grep tenant_manager | grep -v grep || echo \"No tenant_manager process found\"",
+            "fi",
             "# Test health endpoint",
             "HEALTH_RESPONSE=$(curl -s -o /dev/null -w \"%{http_code}\" http://localhost/health 2>/dev/null || echo \"CURL_FAILED\")",
             "echo \"Health endpoint HTTP status: $HEALTH_RESPONSE\"",
