increase wait timeout

--- a/.github/workflows/sync-scripts-to-s3.yml
+++ b/.github/workflows/sync-scripts-to-s3.yml
@@ -30,13 +30,9 @@ env:
 jobs:
   sync-scripts:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        environment: 
-          - prod
     
     # Override matrix if manually triggered
-    environment: "prod"
+    environment: prod
     
     permissions:
       id-token: write
