increase wait timeout

--- a/.github/workflows/sync-scripts-to-s3.yml
+++ b/.github/workflows/sync-scripts-to-s3.yml
@@ -31,8 +31,7 @@ jobs:
   sync-scripts:
     runs-on: ubuntu-latest
     
-    # Override matrix if manually triggered
-    environment: prod
+    environment: "prod"
     
     permissions:
       id-token: write
