use correct deep learning IMA

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -88,7 +88,7 @@ jobs:
           # Get latest Ubuntu 22.04 LTS AMI
           UBUNTU_AMI=$(aws ec2 describe-images \
               --owners 898082745236 \
-              --filters "Name=name,Values=Deep Learning OSS Nvidia Driver AMI GPU PyTorch 2.7 (Amazon Linux 2023)" \
+              --filters "Name=name,Values=Deep Learning OSS Nvidia Driver AMI GPU PyTorch 2.7 (Amazon Linux 2023)*" \
                         "Name=state,Values=available" \
               --query "Images | sort_by(@, &CreationDate) | [-1].ImageId" \
               --output text \
